# HomdEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/game/: game.cpp  game.h
src/graphics/: graphics.cpp  graphics.h
src/graphics/opengl/: opengl.cpp  opengl.h
src/input/: input.cpp  input.h
src/scene/: scene.cpp  scene.h
src/scene/example/: example.cpp  example.h
src/scene/gears/: gears.cpp  gears.h
src/window/: window.cpp  window.h
